// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSX should add just attributes 1`] = `
"var oi_1 = require(\\"./oi\\");
function test() {
  return React.createElement(\\"i\\", {
    id: \\"1\\",
    f: oi_1.default
  });
}
"
`;

exports[`JSX should add just attributes and spread 1`] = `
"var oi_1 = require(\\"./oi\\");
function test() {
  return React.createElement(\\"i\\", Object.assign({
    id: \\"1\\",
    f: oi_1.default
  }, props));
}
"
`;

exports[`JSX should add key literal attributes 1`] = `
"function hey() {
  return React.createElement(\\"div\\", {
    \\"data-automation\\": \\"df\\"
  });
}
"
`;

exports[`JSX should add text 1`] = `
"function test() {
  return React.createElement(\\"div\\", null, \\"1\\");
}
"
`;

exports[`JSX should convert attributes without vales to boolean 1`] = `
"function hey() {
  return React.createElement(\\"div\\", {
    some: true
  });
}
"
`;

exports[`JSX should handle JSX fragment 1`] = `
"var react_1 = require(\\"react\\");
function test() {
  return react_1.default.createElement(\\"div\\", null, react_1.default.createElement(react_1.default.Fragment, null, react_1.default.createElement(\\"div\\", null, \\"1\\")));
}
"
`;

exports[`JSX should handle dotted JSX elements 1`] = `
"var react_1 = require(\\"react\\");
function test() {
  return react_1.default.createElement(animated.div, null, \\"1\\");
}
"
`;

exports[`JSX should handle dotted JSX elements deep 1`] = `
"var react_1 = require(\\"react\\");
function test() {
  return react_1.default.createElement(this.state.foo.bar.animated.div, null);
}
"
`;

exports[`JSX should have only one spread props 1`] = `
"function test() {
  return React.createElement(\\"i\\", Object.assign({}, props));
}
"
`;

exports[`JSX should keep the order 1`] = `
"var oi_1 = require(\\"./oi\\");
function test() {
  return React.createElement(\\"i\\", Object.assign({
    id: 1,
    f: oi_1.default
  }, props, {
    s: 2
  }, rest));
}
"
`;

exports[`JSX should parse simple jsx 1`] = `
"function test() {
  return React.createElement(\\"div\\", null);
}
"
`;

exports[`JSX should remove empty expressions 1`] = `
"function test() {
  return React.createElement(\\"i\\", null, \\" \\", \\" \\");
}
"
`;

exports[`JSX should spread correctly 1`] = `
"function EventList() {
  const cameraIDs = ['a'];
  return React.createElement(Foo, Object.assign({
    jo: 'test'
  }, entry, {
    cameraIDs: cameraIDs,
    key: '123'
  }));
}
"
`;

exports[`JSX should work with JSXSpreadChild 1`] = `
"function test() {
  return React.createElement(\\"i\\", null, children);
}
"
`;
